# hmode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-application-pitch.md
docs/plans/: 2026-05-08-hmode-design.md
src/hmode/: cli.py  config.py  timing.py
tests/: test_cli.py
